# dismech-python

./: .gitignore  2-13 meeting_notes.txt  2random_mesh_20.txt  2random_mesh_4.txt  2random_mesh_8.txt  README.md  environment.py  geometry.py  ground_contact.ipynb  imc.ipynb  imc_contact.ipynb  imc_friction.ipynb  input hemisphere less dense.txt  input hemisphere more dense.txt  input.txt  input2.txt  input3.txt  input4.txt  input_circle_python.txt  input_circle_python_denser.txt  input_full_jellyfish.txt  input_radially_sym_hemisphere.txt  input_shell_more_curved.txt  input_shell_more_curved_rand20_scaled.txt  input_shell_more_curved_scaled.txt  input_shell_random_more_curved.txt  input_twoTriangleContact.txt  input_twoTriangleContact_e2e.txt  input_twoTriangleContact_p2e.txt  input_twoTriangleContact_p2p.txt  input_twoTriangleContact_p2t.txt  meeting_notes.md  meeting_notes.txt  multirod.py  numba_optimization.ipynb  outline.txt  pyproject.toml  requirements.txt  rod_cantilever_n51.ipynb  self_contact_energy_fdm.ipynb  (+13 more)
experiments/: contortion_n21.ipynb  elastic_energy.csv  elastica.npy  example1_YZ.ipynb  example1_YZ_0330.ipynb  example_edge_map.csv  four_corner.ipynb  four_corner.txt  helix_n106.ipynb  helix_n106.txt  hinge.csv  mesh_python_example1.txt  rod_cantilever_n101.ipynb  rod_cantilever_n51.ipynb  rod_catepillar_n51.ipynb  rod_worm_n3.ipynb  shell_cantilever_n40_benchmark.ipynb  snake.ipynb  snake_5.txt  stretch.csv  symplectic_rod_cantilever_n51.ipynb  three_corner_coplaner.txt
old/: fs.py  triangle_energy_einsum.py
tests/: conftest.py  test_fs.py  (+5 more)
(+139 files in other folders)
