[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dismech"
dynamic = ["version"]
dependencies = ["numpy", "scipy", "numba", "matplotlib", "plotly", "ipywidgets", "nbformat"]

# for pytest
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]