[build-system]
requires = [
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
name = "dismech"
dynamic = ["version"]
dependencies = [
    "numpy", "scipy", "numba", "matplotlib", "plotly", "ipywidgets", "nbformat"
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
